src/objects/loan__Lookup__c.object
<CustomObject>
    <description>Lookup</description>
    <fields>
        <fullName>loan__Enabled_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Lookup_Code__c</fullName>
        <label>Lookup Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Lookup_Description__c</fullName>
        <label>Lookup Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Lookup_Sub_Type_Code__c</fullName>
        <defaultValue>&quot;NONE&quot;</defaultValue>
        <label>Lookup Sub Type Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Lookup_Sub_Type__c</fullName>
        <label>Lookup Sub Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Lookup_Type__c</fullName>
        <label>Lookup Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__System_Defined_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Defined</label>
        <type>Checkbox</type>
    </fields>
    <label>Lookup</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>